# tops_openfast

./: .gitignore  OpenFAST_FMU.res  README.md  TestInSimulink.slx  TestInSimulink_prmts.m  fort.30  pyproject.toml  requirements.txt
casestudies/dyn_sim/: README.md  __init__.py  assignment_sim.py  compare_WT_vs_FMU_results.py  k2a_sim.py  k2a_sim_renwables.py  line_outage.py  oscillator.py  oscillator_vsc.py  short_circuit.py  test_UIC_sim_sig.py  test_WT_FMU_drivetrain_sim.py  test_WT_FMU_sim.py  test_WT_sim.py
casestudies/dyn_sim/plotting/: README.md  __init__.py  compare_WT_vs_FMU_results.py  log_paths.py  regenerate_thesis_plots_from_csv.py  thesis_plot_style.py
casestudies/impedance_stability/: README.md  __init__.py  paths.py
casestudies/modal_analysis/: eigenval_param_sweep.py  eigenval_param_sweep_uic.py  participation.py  participation_WT.py  participation_WT_FMU.py  participation_uic.py  plot_eigs.py  plot_eigs_WT.py  plot_eigs_uic.py
casestudies/ps_data/: test_UIC.py  test_WT.py  test_WT_FMU_.py  test_WT_FMU_drivetrain_.py  test_WT_pq.py  uic_ib.py  uic_ib_sig.py  wt_uic_fmu_shared.py
openfast_fmu/resources/: wd.txt
src/: plotting.py
src/dyn_models/: FMUtoUIC.py  FMUtoUICdrivetrain.py  __init__.py  perturbations.py  speed_lpf.py  vsc.py  windturbine.py
src/tops_openfast/: plotting.py
test1002/: mainInput.RO.dbg  mainInput.RO.echo  mainInput.ech  mainInput.fst
test1002/ControlData/: ROSCO.IEA15MW.IN
test1002/WindData/: const_14mps_360s.hh  const_14mps_900s.hh  ramp_9to11.hh
wind_data/: MPT_Kopt2150.csv  MPT_T_Kopt2150.csv
(+37 files in other folders)
